@@ -1,8 +1,8 @@
 Package: ASMap
 Type: Package
 Title: Linkage Map Construction using the MSTmap Algorithm
-Version: 0.4-5
-Date: 2015-08-17
+Version: 0.4-7
+Date: 2016-06-24
 Author: Julian Taylor <julian.taylor@adelaide.edu.au>, David Butler
     <david.butler@daff.qld.gov.au>.
 Maintainer: Julian Taylor <julian.taylor@adelaide.edu.au>
@@ -12,6 +12,6 @@ Depends: R (>= 2.10), qtl, gtools, fields, RColorBrewer, lattice
 Description: Functions for Accurate and Speedy linkage map construction, manipulation and diagnosis of Doubled Haploid, Backcross and Recombinant Inbred 'R/qtl' objects. This includes extremely fast linkage map clustering and optimal marker ordering using 'MSTmap' (see Wu et al.,2008).
 License: GPL (>= 2)
 NeedsCompilation: yes
-Packaged: 2015-08-17 06:36:04 UTC; julian.taylor
+Packaged: 2016-06-24 04:44:58 UTC; julian.taylor
 Repository: CRAN
-Date/Publication: 2015-08-17 09:33:16
+Date/Publication: 2016-06-24 09:53:21
