@@ -1,18 +1,19 @@
-5c4c6bd4f7577871defb0760fd7476f5 *DESCRIPTION
-5cc320eb049480e6fa7eda439cabacdf *NAMESPACE
-4eed4398c661b4c825f885d67636681d *R/mstmap10.R
-bf212498a2ef601009d07cfbe8c652f3 *build/vignette.rds
+aab51dff1e1b8bf9901799bfe33544fd *DESCRIPTION
+4a91d38ff23e29db1b92c486bbca1b6b *NAMESPACE
+4a04d3fa291464fa5067f194d3572e78 *R/mstmap11.R
+714e468ba9b079bc17341f682b26f20f *build/vignette.rds
 17ffa7ec460bd87e4829a099e5d2e133 *data/mapBC.RData
 00adc3a855bfd6d59bff8551a25df1cb *data/mapBCu.RData
 e41448667946c60873941e59a0501654 *data/mapDH.RData
 945add16e921bff31f24a8f77b7bf9da *data/mapDHf.RData
 d4d9aa0a173827cc0d9960ccf67f3318 *data/mapF2.RData
-d0661394f015f58191bc793d9f607e2c *inst/NEWS.Rd
+62cf94384a3c1376b77509686e9856a4 *inst/NEWS.Rd
 3e7d7e09d20116ba3d0aed3a70b5d5db *inst/doc/asmapvignette.R
-e5cdb62c195796ded043a68b7887860e *inst/doc/asmapvignette.Rnw
+d9d49613f4a5f27ef2f969241833013d *inst/doc/asmapvignette.Rnw
 a37c1ac4bb0218565d8838734f1a55eb *inst/doc/asmapvignette.pdf
 eca0f5e4c34638820bdacceaeaa3ab6e *man/ASMap-internal.Rd
 1c4236fb3b059ccaaa2dd7e7a0d7ff16 *man/ASMap-package.Rd
+5905f363c1c32aca0cb758984f6ae191 *man/alignCross.Rd
 2edd75dcd87a651abd50bd8183eb8abe *man/breakCross.Rd
 9ed57e3d266c221ece169d4fdac11767 *man/combineMap.Rd
 2f34582a6551d01c01811e636e947584 *man/fixClones.Rd
@@ -27,15 +28,15 @@ e3c1425077b1cda2134df2059ef85ba9 *man/mapF2.Rd
 407338c05d9af965879c861b52d378a8 *man/mstmap.cross.Rd
 f6e5c32d68c11a8aa9daa74008ee8ab2 *man/mstmap.data.frame.Rd
 592b9900ee69bc52dfcef4112dca1618 *man/pp.init.Rd
-1057fef6c7ebb9076662df3f73f05e44 *man/profileGen.Rd
-bdf2803d00ef02abd87263194dd8502e *man/profileMark.Rd
+1f21b3a3993e02a7903e27eaa889ebb9 *man/profileGen.Rd
+0b1b883793e78b42d3a7362d841033ae *man/profileMark.Rd
 78b8840873518f58815d0a83791b9a1d *man/pullCross.Rd
 0869f7cea4e8fcaefc7351057bc66ed2 *man/pushCross.Rd
 6977e2cc01f7377665d45064e9dbba8e *man/quickEst.Rd
-0c5f5e1f31989eb6ca8e59ccebd81119 *man/statGen.Rd
-095888b9dd2752da3d93244d2aa8ac2e *man/statMark.Rd
+95664fa4eff4aa647a7bbc072c75ed4b *man/statGen.Rd
+1dc8935c642ef2c0ad88304ba8f8bfa0 *man/statMark.Rd
 c9c9e9a21a5409ecf068d30420dc4fac *man/subsetCross.Rd
-fdf91dd1253f73210b79735dfec9edce *src/MSTOpt.cpp
+ea035ad495bb1801d4819120fc4c6bde *src/MSTOpt.cpp
 cff37db708b644c0f3923314856e9a8b *src/MSTOpt.h
 a93303003e523b76263d5d445b787642 *src/constants.h
 788f30ed3bb60e0b812bd326c2b713e0 *src/genetic_map_DH.cpp
@@ -43,7 +44,7 @@ ccc07bf616ebd568aca3055c3f47d258 *src/genetic_map_DH.h
 24e9812bda904535e6b464b773ea8a7b *src/genetic_map_RIL.cpp
 decf6d2e7061050fba2b411042768b19 *src/genetic_map_RIL.h
 29a18e51193e96a55e8c0aae47d99234 *src/is_number.cpp
-3715e2e0840eb8ce492fff1790d3dc57 *src/linkage_group_DH.cpp
+2ed0cdd9e2224f5c5710ab397eaa744e *src/linkage_group_DH.cpp
 1406ddaa5d25ff4c8141754f242ad7d8 *src/linkage_group_DH.h
 d93a4d8157db55017298832c19ccf139 *src/linkage_group_RIL.cpp
 1002399b2bdbc22994d319bf6fbc04fc *src/linkage_group_RIL.h
@@ -53,7 +54,7 @@ dc13406366059cb93ec6e303d365d03a *src/sexp.cpp
 40bceb71c546f57a437141ec5ed7863c *vignettes/SAGI.png
 40ca5847555d6af8e641fa8bec472d64 *vignettes/SAGI.sty
 8ef8189fd90401c8af184ce339ae2647 *vignettes/UoA.png
-e5cdb62c195796ded043a68b7887860e *vignettes/asmapvignette.Rnw
+d9d49613f4a5f27ef2f969241833013d *vignettes/asmapvignette.Rnw
 1cc5e018f2c5a2dc43a167620837a87f *vignettes/biometrika.bst
 786f23de21b361d7d8b07fc9db0a613f *vignettes/heatmap.png
 3873aebdf9805a66ae4935b167f5f029 *vignettes/heatmapDH.png
